--- a/findings.ipynb
+++ b/findings.ipynb
@@ -5,7 +5,7 @@
    "id": "0d35f200",
    "metadata": {},
    "source": [
-    "## Findings - Comparative Analysis of Model Performance\n",
+    "## Findings\n",
     "#### Introduction\n",
     "Visual comparative analytics provide a clear and concise way to compare the performance of different models. This section presents a script that loads the performance metrics from a CSV file and visualizes these metrics using various plots for comprehensive analysis. The visualizations include bar plots for individual metrics, a heatmap for a comparative overview, and box plots for metric distribution. These visualizations help in understanding the strengths and weaknesses of each model in the context of the specific performance metrics.\n",
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "5eeb74d4",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "14b16071",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "49276dea",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "e1d2424e",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "21df4b2d",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "a1c6e032",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x3/h0qgc64j0gs_982j8_34cq540000gp/T/ipykernel_3792/2603582580.py:7: FutureWarning: In a future version of pandas all arguments of DataFrame.pivot will be keyword-only.\n",
+      "/var/folders/x3/h0qgc64j0gs_982j8_34cq540000gp/T/ipykernel_55730/2603582580.py:7: FutureWarning: In a future version of pandas all arguments of DataFrame.pivot will be keyword-only.\n",
       "  metrics_pivot = metrics_pivot.pivot('Model', 'Metric', 'Value')\n"
      ]
     },
@@ -372,7 +372,147 @@
     }
    ],
    "source": [
-    "# Example usage\n",
+    "# Rum Main Function\n",
+    "file_path = 'model_performance_metrics.csv'\n",
+    "main(file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dc06c2a",
+   "metadata": {},
+   "source": [
+    "#### Tabulation of Model Performance Metrics\n",
+    "\n",
+    "The code below is used to tabulate the performance metrics of our models, `ARIMA`, `SARIMA`, `XGBoost` and `LSTM`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f50e5803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Performance Metrics:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>MAE (Total)</th>\n",
+       "      <th>RMSE (Total)</th>\n",
+       "      <th>MASE (Total)</th>\n",
+       "      <th>WMAPE (Total)</th>\n",
+       "      <th>MAE (Seasonal)</th>\n",
+       "      <th>RMSE (Seasonal)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ARIMA</td>\n",
+       "      <td>191749.836610</td>\n",
+       "      <td>192170.507392</td>\n",
+       "      <td>6802.202674</td>\n",
+       "      <td>1714.555423</td>\n",
+       "      <td>169780.314762</td>\n",
+       "      <td>170236.874620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SARIMA</td>\n",
+       "      <td>0.138003</td>\n",
+       "      <td>0.484652</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>12512.470294</td>\n",
+       "      <td>16996.223204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>5.862496</td>\n",
+       "      <td>197.861266</td>\n",
+       "      <td>0.207968</td>\n",
+       "      <td>0.261855</td>\n",
+       "      <td>9159.449165</td>\n",
+       "      <td>12460.039498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LSTM</td>\n",
+       "      <td>17.720125</td>\n",
+       "      <td>63.146005</td>\n",
+       "      <td>0.628610</td>\n",
+       "      <td>0.791489</td>\n",
+       "      <td>9156.349258</td>\n",
+       "      <td>12458.843139</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Model    MAE (Total)   RMSE (Total)  MASE (Total)  WMAPE (Total)  \\\n",
+       "0    ARIMA  191749.836610  192170.507392   6802.202674    1714.555423   \n",
+       "1   SARIMA       0.138003       0.484652           inf            inf   \n",
+       "2  XGBoost       5.862496     197.861266      0.207968       0.261855   \n",
+       "3     LSTM      17.720125      63.146005      0.628610       0.791489   \n",
+       "\n",
+       "   MAE (Seasonal)  RMSE (Seasonal)  \n",
+       "0   169780.314762    170236.874620  \n",
+       "1    12512.470294     16996.223204  \n",
+       "2     9159.449165     12460.039498  \n",
+       "3     9156.349258     12458.843139  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Load the metrics from the CSV file\n",
+    "def load_metrics(file_path):\n",
+    "    metrics_df = pd.read_csv(file_path)\n",
+    "    return metrics_df\n",
+    "\n",
+    "# Display the model performance metrics\n",
+    "def display_model_performance_metrics(metrics_df):\n",
+    "    print(\"Model Performance Metrics:\")\n",
+    "    display(metrics_df)\n",
+    "\n",
+    "# Main function\n",
+    "def main(file_path):\n",
+    "    metrics_df = load_metrics(file_path)\n",
+    "    display_model_performance_metrics(metrics_df)\n",
+    "\n",
+    "# Run main function\n",
     "file_path = 'model_performance_metrics.csv'\n",
     "main(file_path)"
    ]
@@ -380,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "643a1d65",
+   "id": "6d7eca62",
    "metadata": {},
    "outputs": [],
    "source": []
